I'll have to clean this up soon

--- a/bauhaus.html
+++ b/bauhaus.html
@@ -26,6 +26,7 @@
         width: 100%;
         border-radius: 200px;
         box-shadow: 0 0 100px 100px #000;
+        filter: blur(10px);
     }
     .head{
         display: flex;
