--- a/lel.html
+++ b/lel.html
@@ -2,8 +2,8 @@
 <head>
 	<title>Time Waste O-matic 3000</title>
 	<link rel="stylesheet" type="text/css" href="reddit.css">
-	<script src="http://fb.me/react-0.11.1.js"></script>
-	<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
+	<script src="https://fb.me/react-0.11.1.js"></script>
+	<script src="https://fb.me/JSXTransformer-0.11.1.js"></script>
 	<script src="element1.min.js" type="text/javascript"></script>
 	<script src="reddit2.js" type="text/jsx"></script>
 </head>
